--- a/single-hotel-page/index.html
+++ b/single-hotel-page/index.html
@@ -159,7 +159,7 @@
               room has a seating space.</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
-            <div class="right-review border shadow-sm rounded-3 m-3 pb-2">
+            <div class="right-review border shadow-sm rounded-3 m-3 pb-2 d-none d-lg-block d-md-block">
               <!-- rating section start  -->
               <div class="d-flex justify-content-start mt-2 ms-3 mb-1">
                 <div class="right rounded-1">
@@ -277,15 +277,17 @@
           <div class="col-lg-3">
             <h1>&nbsp;</h1>
           </div>
-          <div class="col-lg-3 ps-4">
-            <h5 class="pt-4 me-1 ms-1" style="color: #FF1717;">Price</h5>
+          <div class="col-lg-3 ps-5 d-flex justify-content-center">
+            <div class="mx-auto">
+              <h5 class="pt-4 me-1 ms-1" style="color: #FF1717;">Price</h5>
             <div class="discount-banner">30% OFF</div>
             <p class=" pe-2 text-secondary ms-1"><s>₹5,500</s></p>
             <h4 class="mb-1 me-1 ms-1">₹4,125</h4>
             <p class="pt-1">+₹ 495 taxes and charges</p>
             <a href="../reservation-page/reservation.html" id="redirectLink"><button
-                class="btn text-light ms-1 btn-sm ms-1 mb-3" style="width: 100px; background-color: red;"
-                type="button">Book Now</button></a>
+                class="btn text-light ms-1 btn-sm ms-1 mb-3 p-2 m-1" style="width: 100px; background-color: red;"
+                type="button"><b>Book Now</b></button></a>
+            </div>
           </div>
         </div>
       </div>
