--- a/single-hotel-page/index.html
+++ b/single-hotel-page/index.html
@@ -376,28 +376,30 @@
       <!-- question section start  -->
       <div class="question-section mt-3">
         <h5>Travelers frequently asked questions.</h5>
-        <div class="row">
-          <div class="col-lg-6 col-md-12   my-3">
-            <p><img src="image/question section img/not_listed_location.jpg" alt="">How can I change my account details?
-            </p>
-            <p><img src="image/question section img/not_listed_location.jpg" alt="">How do I search for available rooms?
-            </p>
-            <p><img src="image/question section img/not_listed_location.jpg" alt="">Can I filter search results by
-              price, rating, or amenities?</p>
-            <p><img src="image/question section img/not_listed_location.jpg" alt="">How do I check the availability of a
-              room for specific dates?</p>
-            <p><img src="image/question section img/not_listed_location.jpg" alt="">What information is required to make
-              a booking?</p>
-          </div>
-          <div class="col-lg-6 col-md-12 my-3">
-            <p><img src="image/question section img/not_listed_location.jpg" alt="">Can I book multiple rooms at once?
-            </p>
-            <p><img src="image/question section img/not_listed_location.jpg" alt="">Is my payment information secure?
-            </p>
-            <p><img src="image/question section img/not_listed_location.jpg" alt="">What is the cancellation policy?</p>
-            <p><img src="image/question section img/not_listed_location.jpg" alt="">Can I request additional amenities
-              like a crib or extra bed?</p>
-            <p><img src="image/question section img/not_listed_location.jpg" alt="">Is there 24/7 support available?</p>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-md-12   my-3">
+              <p><img src="image/question section img/not_listed_location.jpg" alt="">How can I change my account details?
+              </p>
+              <p><img src="image/question section img/not_listed_location.jpg" alt="">How do I search for available rooms?
+              </p>
+              <p><img src="image/question section img/not_listed_location.jpg" alt="">Can I filter search results by
+                price, rating, or amenities?</p>
+              <p><img src="image/question section img/not_listed_location.jpg" alt="">How do I check the availability of a
+                room for specific dates?</p>
+              <p><img src="image/question section img/not_listed_location.jpg" alt="">What information is required to make
+                a booking?</p>
+            </div>
+            <div class="col-lg-6 col-md-12 my-3">
+              <p><img src="image/question section img/not_listed_location.jpg" alt="">Can I book multiple rooms at once?
+              </p>
+              <p><img src="image/question section img/not_listed_location.jpg" alt="">Is my payment information secure?
+              </p>
+              <p><img src="image/question section img/not_listed_location.jpg" alt="">What is the cancellation policy?</p>
+              <p><img src="image/question section img/not_listed_location.jpg" alt="">Can I request additional amenities
+                like a crib or extra bed?</p>
+              <p><img src="image/question section img/not_listed_location.jpg" alt="">Is there 24/7 support available?</p>
+            </div>
           </div>
         </div>
       </div>
