--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
           <!-- Third column -->
           <div class="col-12 col-md-7 col-lg-4 d-flex  justify-content-center align-items-center mt-2">
             <div class="d-flex justify-content-center align-items-center mx-auto ps-4 ms-2">
-              <a class="nav-link" href="/login/signup.html" id="registerLink">
+              <a class="nav-link" href="./login/signup.html" id="registerLink">
                 <button id="registerButton" type="button" class="btn btn-light text-danger"
                   style="height: 30px; display: flex; align-items: center; justify-content: center;">
                   <b>Register</b>
                 </button>
               </a>
-              <a class="nav-link" href="/login/index.html" id="loginLink">
+              <a class="nav-link" href="./login/index.html" id="loginLink">
                 <button id="loginButton" type="button" class="btn btn-light text-danger"
                   style="height: 30px; display: flex; align-items: center; justify-content: center;">
                   <b>Login</b>
