--- a/details-page/details.html
+++ b/details-page/details.html
@@ -59,8 +59,6 @@
 </head>
 
 <body>
-
-
   <header>
     <nav class="navbar navbar-expand topbarstatic-top" style="background-color: #FF1717;">
       <!-- First column -->
@@ -93,10 +91,10 @@
             <ul class="navbar-nav ml-auto">
               <!-- Nav Item - User Information -->
               <li class="nav-item dropdown no-arrow" id="userDetailsContainer">
-                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+                <a class="nav-link " href="#" id="userDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
+                  <img src="" id="userPhoto" alt="User Photo" class="rounded-circle" style="width: 30px; height: 30px; display: none;">
                   <span class="mr-2 d-none d-lg-inline text-gray-600 text-light" id="userName"></span>
-                  <i class="fa-solid fa-user p-2 text-white fw-bold"></i>
                 </a>
                 <!-- Dropdown - User Information -->
                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in " aria-labelledby="userDropdown">
@@ -105,7 +103,7 @@
                     Profile
                   </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal" id="logoutButton">
+                  <a class="dropdown-item" href="../index.html" data-toggle="modal" data-target="#logoutModal" id="logoutButton">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Logout
                   </a>
@@ -188,9 +186,10 @@
             </div>
             <!-- Search Button -->
             <div class="form-group col-lg-2 col-md-6 col-sm-12">
-              <button type="submit" class="btn text-light" id="search"
+              <button  type="submit" class="btn text-light" id="search"
                 style="background-color: #FF1717;">Search</button>
             </div>
+            
           </div>
         </form>
       </div>
@@ -1098,6 +1097,64 @@
 
   </footer>
 
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
+  
+    const firebaseConfig = {
+      apiKey: "AIzaSyCp2e7CNo83HwDx_HAVgY_IDh0_KW2Y0HI",
+      authDomain: "y-spot-e84ca.firebaseapp.com",
+      databaseURL: "https://y-spot-e84ca-default-rtdb.firebaseio.com",
+      projectId: "y-spot-e84ca",
+      storageBucket: "y-spot-e84ca.appspot.com",
+      messagingSenderId: "783996806068",
+      appId: "1:783996806068:web:298ca1ddb4dfb7e758c8e1",
+      measurementId: "G-TSH2JVYJHR"
+    };
+  
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth();
+  
+    window.onload = () => {
+      const userDetailsContainer = document.getElementById("userDetailsContainer");
+      const registerLink = document.getElementById("registerLink");
+      const loginLink = document.getElementById("loginLink");
+      const userName = document.getElementById("userName");
+      const userPhoto = document.getElementById("userPhoto");
+  
+      onAuthStateChanged(auth, (user) => {
+        if (user) {
+          userDetailsContainer.style.display = "block";
+          registerLink.style.display = "none";
+          loginLink.style.display = "none";
+          userName.textContent = user.displayName || "User";
+          if (user.photoURL) {
+            userPhoto.src = user.photoURL;
+            userPhoto.style.display = "inline-block";
+          } else {
+            userPhoto.style.display = "none";
+          }
+        } else {
+          userDetailsContainer.style.display = "none";
+          registerLink.style.display = "block";
+          loginLink.style.display = "block";
+        }
+      });
+    };
+  
+    document.getElementById('logoutButton').addEventListener('click', function () {
+      signOut(auth).then(() => {
+        alert('Logged out successfully');
+        document.getElementById("userDetailsContainer").style.display = "none";
+        document.getElementById("registerLink").style.display = "block";
+        document.getElementById("loginLink").style.display = "block";
+        window.location.href = './login/index.html';
+      }).catch((error) => {
+        console.error('Error logging out: ', error);
+        alert('Error logging out. Please try again.');
+      });
+    });
+  </script>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       // Initialize Flatpickr for date selection
@@ -1201,58 +1258,8 @@
   </script>
   <!-- form get javascript element end  -->
   <!-- user name fetch and logout javascript function start  -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyCp2e7CNo83HwDx_HAVgY_IDh0_KW2Y0HI",
-      authDomain: "y-spot-e84ca.firebaseapp.com",
-      databaseURL: "https://y-spot-e84ca-default-rtdb.firebaseio.com",
-      projectId: "y-spot-e84ca",
-      storageBucket: "y-spot-e84ca.appspot.com",
-      messagingSenderId: "783996806068",
-      appId: "1:783996806068:web:298ca1ddb4dfb7e758c8e1",
-      measurementId: "G-TSH2JVYJHR"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth();
-
-    window.onload = () => {
-      const userDetailsContainer = document.getElementById("userDetailsContainer");
-      const registerLink = document.getElementById("registerLink");
-      const loginLink = document.getElementById("loginLink");
-
-      onAuthStateChanged(auth, (user) => {
-        if (user) {
-          userDetailsContainer.style.display = "block";
-          registerLink.style.display = "none";
-          loginLink.style.display = "none";
-          document.getElementById("userName").textContent = user.displayName || "User";
-        } else {
-          userDetailsContainer.style.display = "none";
-          registerLink.style.display = "block";
-          loginLink.style.display = "block";
-        }
-      });
-    };
-
-    document.getElementById('logoutButton').addEventListener('click', function () {
-      signOut(auth).then(() => {
-        alert('Logged out successfully');
-        // Hide user details and show register and login links
-        document.getElementById("userDetailsContainer").style.display = "none";
-        document.getElementById("registerLink").style.display = "block";
-        document.getElementById("loginLink").style.display = "block";
-        // Redirect to login page or home page after logout
-        window.location.href = '../login/index.html';
-      }).catch((error) => {
-        console.error('Error logging out: ', error);
-        alert('Error logging out. Please try again.');
-      });
-    });
-  </script>
+ 
+  
   <!-- user name fetch and logout javascript function end  -->
      <!-- back to top button start  -->
      <button id="backToTop" class="btn" style="background-color: #ff0000;"><i class="fa-solid fa-arrow-up text-light"></i></button>
