--- a/index.html
+++ b/index.html
@@ -135,12 +135,11 @@
               </a>
             </div>
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item dropdown no-arrow" id="userDetailsContainer">
-                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+              <li class="nav-item dropdown no-arrow" id="userDetailsContainer" style="display: none;">
+                <a class="nav-link " href="#" id="userDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
                   <img id="userPhoto" src="" alt="User Photo" style="width: 30px; height: 30px; border-radius: 50%; display: none;">
                   <span class="mr-2 d-none d-lg-inline text-gray-600 text-light" id="userName"></span>
-                  <i class="fa-solid fa-user p-2 text-white fw-bold"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
                   <a class="dropdown-item" href="#">
@@ -168,7 +167,6 @@
     </nav>
     <div class="" id="included-header"></div>
   </header>
-  
   <main>
     <div class="p-5 mb-4 bg-body-tertiary"
       style="background-image: url(./assets/img/Rectangle\ 377.jpg); background-repeat: no-repeat; background-size: cover; background-color: rgb(237, 26, 37);">
@@ -177,7 +175,6 @@
         <p class="col-md-8 fs-4 text-light">Unwind and stretch out in a vacation home</p>
         <button type="button" class="btn text-light btn-danger">Discover Vacation Rentals</button>
       </div>
-
     </div>
    <!-- hero section search form start -->
 <div class="container custom-container rounded" id="move2" style="background-color: #1C1B1F; width: 100%;">
