--- a/single-hotel-page/index.html
+++ b/single-hotel-page/index.html
@@ -59,35 +59,39 @@
           </div>
           <!-- Third column -->
           <div class="col-12 col-md-7 col-lg-4 d-flex justify-content-center align-items-center mt-2">
-            <a class="nav-link px-2" href="../login/signup.html" id="registerLink">
-              <button id="registerButton" type="button" class="btn btn-light text-danger"
-                style="height: 30px; display: flex; align-items: center; justify-content: center;">
-                <b>Register</b>
-              </button>
-            </a>
-            <a class="nav-link px-2" href="../login/index.html" id="loginLink">
-              <button id="loginButton" type="button" class="btn btn-light text-danger"
-                style="height: 30px; display: flex; align-items: center; justify-content: center;">
-                <b>Login</b>
-              </button>
-            </a> 
+            <div class="d-flex justify-content-center align-items-center mx-auto ps-4 ms-2">
+              <a class="nav-link" href="../login/signup.html" id="registerLink">
+                <button id="registerButton" type="button" class="btn btn-light text-danger"
+                  style="height: 30px; display: flex; align-items: center; justify-content: center; margin-right: 20px;">
+                  <b>Register</b>
+                </button>
+              </a>
+              <a class="nav-link" href="../login/index.html" id="loginLink">
+                <button id="loginButton" type="button" class="btn btn-light text-danger"
+                  style="height: 30px; display: flex; align-items: center; justify-content: center;">
+                  <b>Login</b>
+                </button>
+              </a>
+            </div>
+          </div>
+          
             <!-- Topbar Navbar -->
             <ul class="navbar-nav ml-auto">
               <!-- Nav Item - User Information -->
               <li class="nav-item dropdown no-arrow" id="userDetailsContainer">
-                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+                <a class="nav-link " href="#" id="userDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
+                  <img src="" id="userPhoto" alt="User Photo" class="rounded-circle" style="width: 30px; height: 30px; display: none;">
                   <span class="mr-2 d-none d-lg-inline text-gray-600 text-light" id="userName"></span>
-                  <i class="fa-solid fa-user p-2 text-white fw-bold"></i>
                 </a>
                 <!-- Dropdown - User Information -->
-                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in mx-auto" aria-labelledby="userDropdown">
+                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in " aria-labelledby="userDropdown">
                   <a class="dropdown-item" href="#">
                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                     Profile
                   </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal" id="logoutButton">
+                  <a class="dropdown-item" href="../index.html" data-toggle="modal" data-target="#logoutModal" id="logoutButton">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Logout
                   </a>
@@ -464,6 +468,7 @@
               <img class="card-img-top mt-5 " style="width: 150px; height: 150px;"
                 src="./image/tiruvannamalai near hotel/Screenshot (8) 1.jpg" alt="Hotel 1">
             </div>
+            
             <div class="card-body">
               <h5 class="card-title mt-4 text-danger">Royal Mini Hall</h5>
               <div class="d-flex justify-content-center align-items-center mb-1">
@@ -567,7 +572,7 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
-
+  
     const firebaseConfig = {
       apiKey: "AIzaSyCp2e7CNo83HwDx_HAVgY_IDh0_KW2Y0HI",
       authDomain: "y-spot-e84ca.firebaseapp.com",
@@ -578,21 +583,29 @@
       appId: "1:783996806068:web:298ca1ddb4dfb7e758c8e1",
       measurementId: "G-TSH2JVYJHR"
     };
-
+  
     const app = initializeApp(firebaseConfig);
     const auth = getAuth();
-
+  
     window.onload = () => {
       const userDetailsContainer = document.getElementById("userDetailsContainer");
       const registerLink = document.getElementById("registerLink");
       const loginLink = document.getElementById("loginLink");
-
+      const userName = document.getElementById("userName");
+      const userPhoto = document.getElementById("userPhoto");
+  
       onAuthStateChanged(auth, (user) => {
         if (user) {
           userDetailsContainer.style.display = "block";
           registerLink.style.display = "none";
           loginLink.style.display = "none";
-          document.getElementById("userName").textContent = user.displayName || "User";
+          userName.textContent = user.displayName || "User";
+          if (user.photoURL) {
+            userPhoto.src = user.photoURL;
+            userPhoto.style.display = "inline-block";
+          } else {
+            userPhoto.style.display = "none";
+          }
         } else {
           userDetailsContainer.style.display = "none";
           registerLink.style.display = "block";
@@ -600,16 +613,14 @@
         }
       });
     };
-
+  
     document.getElementById('logoutButton').addEventListener('click', function () {
       signOut(auth).then(() => {
         alert('Logged out successfully');
-        // Hide user details and show register and login links
         document.getElementById("userDetailsContainer").style.display = "none";
         document.getElementById("registerLink").style.display = "block";
         document.getElementById("loginLink").style.display = "block";
-        // Redirect to login page or home page after logout
-        window.location.href = '../login/index.html';
+        window.location.href = '../index.html';
       }).catch((error) => {
         console.error('Error logging out: ', error);
         alert('Error logging out. Please try again.');
