remove some scripts in the file

--- a/details-page/details.html
+++ b/details-page/details.html
@@ -1241,7 +1241,7 @@
 
   <!-- Your HTML code for the form -->
      <!-- form get javascript element start  -->
-  <script>
+  <!-- <script>
     document.addEventListener("DOMContentLoaded", function () {
       const urlParams = new URLSearchParams(window.location.search);
       const location = urlParams.get('location');
@@ -1255,7 +1255,7 @@
       const redirectLink = document.getElementById('redirectLink');
       redirectLink.href = `../single-hotel-page/index.html?location=${encodeURIComponent(location)}&dates=${encodeURIComponent(dates)}&guests=${encodeURIComponent(guests)}`;
     });
-  </script>
+  </script> -->
   <!-- form get javascript element end  -->
   <!-- user name fetch and logout javascript function start  -->
  
