--- a/backupfiles/indexmain.html
+++ b/backupfiles/indexmain.html
@@ -33,7 +33,84 @@
       }
   </style>
   <!-- firebase script start -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+    // Initialize Flatpickr for date selection
+    flatpickr("#dates", {
+        dateFormat: "Y-m-d",
+        mode: "range"
+    });
+    // Toggle guests dropdown visibility
+    document.getElementById('guests').addEventListener('click', function () {
+        var dropdown = document.getElementById('guestsDropdown');
+        if (dropdown.style.display === "none") {
+            dropdown.style.display = "block";
+            this.readOnly = true;
+        } else {
+            dropdown.style.display = "none";
+            this.readOnly = false;
+        }
+    });
 
+    // Add event listeners for incrementing and decrementing adults, children, and rooms
+    document.getElementById('adults-plus').addEventListener('click', function() {
+        incrementValue('adults');
+    });
+
+    document.getElementById('adults-minus').addEventListener('click', function() {
+        decrementValue('adults');
+    });
+
+    document.getElementById('children-plus').addEventListener('click', function() {
+        incrementValue('children');
+    });
+
+    document.getElementById('children-minus').addEventListener('click', function() {
+        decrementValue('children');
+    });
+
+    document.getElementById('rooms-plus').addEventListener('click', function() {
+        incrementValue('rooms');
+    });
+
+    document.getElementById('rooms-minus').addEventListener('click', function() {
+        decrementValue('rooms');
+    });
+
+    // Done button to close the dropdown
+    document.getElementById('guests-done').addEventListener('click', function() {
+        document.getElementById('guestsDropdown').style.display = "none";
+        document.getElementById('guests').readOnly = false;
+    });
+});
+// Function to increment the input value
+function incrementValue(inputId) {
+    var input = document.getElementById(inputId);
+    var currentValue = parseInt(input.value) || 0; // Ensure currentValue is a number
+    input.value = currentValue + 0;
+    updateGuests();
+}
+
+// Function to decrement the input value with a minimum of 0
+function decrementValue(inputId) {
+    var input = document.getElementById(inputId);
+    var currentValue = parseInt(input.value) || 0; // Ensure currentValue is a number
+    if (currentValue > 0) {
+        input.value = currentValue - 1;
+        updateGuests();
+    }
+}
+
+// Function to update the "Adults, Children & Rooms" input
+function updateGuests() {
+    var adults = document.getElementById('adults').value;
+    var children = document.getElementById('children').value;
+    var rooms = document.getElementById('rooms').value;
+    var guests = "Adults: " + adults + ", Children: " + children + ", Rooms: " + rooms;
+    document.getElementById('guests').value = guests;
+}
+
+  </script>
 </head>
 
 <body>
@@ -177,8 +254,6 @@
         var dateRangePicker = flatpickr("#dates", {
             mode: "range",
             dateFormat: "d, F Y",
-            minDate: "today", // Disable past dates
-            defaultDate: [new Date(), new Date()], // Default check-in and check-out to today
             onClose: function(selectedDates) {
                 if (selectedDates.length === 2) {
                     sessionStorage.setItem('checkin', selectedDates[0].toLocaleDateString());
@@ -188,24 +263,19 @@
         });
 
         // Retrieve data from sessionStorage and set it in the form
-        var location = sessionStorage.getItem('location') || 'Tiruvannamalai';
+        var location = sessionStorage.getItem('location');
         var checkin = sessionStorage.getItem('checkin');
         var checkout = sessionStorage.getItem('checkout');
-        var adults = sessionStorage.getItem('adults') || 1;
-        var children = sessionStorage.getItem('children') || 0;
-        var rooms = sessionStorage.getItem('rooms') || 1;
+        var adults = sessionStorage.getItem('adults');
+        var children = sessionStorage.getItem('children');
+        var rooms = sessionStorage.getItem('rooms');
 
-        document.getElementById('location').value = location;
-        if (checkin && checkout) {
-            dateRangePicker.setDate([new Date(checkin), new Date(checkout)]);
-        } else {
-            dateRangePicker.setDate([new Date(), new Date()]);
-        }
-        document.getElementById('adults').value = adults;
-        document.getElementById('children').value = children;
-        document.getElementById('rooms').value = rooms;
+        if (location) document.getElementById('location').value = location;
+        if (checkin && checkout) dateRangePicker.setDate([new Date(checkin), new Date(checkout)]);
+        if (adults) document.getElementById('adults').value = adults;
+        if (children) document.getElementById('children').value = children;
+        if (rooms) document.getElementById('rooms').value = rooms;
         updateGuests();
-        updateButtonsState();
 
         // Toggle guests dropdown visibility
         document.getElementById('guests').addEventListener('click', function(event) {
@@ -223,12 +293,12 @@
         });
 
         // Add event listeners for incrementing and decrementing adults, children, and rooms
-        document.getElementById('adults-plus').addEventListener('click', function() { incrementValue('adults', 30); });
-        document.getElementById('adults-minus').addEventListener('click', function() { decrementValue('adults', 1); });
-        document.getElementById('children-plus').addEventListener('click', function() { incrementValue('children', 10); });
-        document.getElementById('children-minus').addEventListener('click', function() { decrementValue('children', 0); });
-        document.getElementById('rooms-plus').addEventListener('click', function() { incrementValue('rooms', 30); });
-        document.getElementById('rooms-minus').addEventListener('click', function() { decrementValue('rooms', 1); });
+        document.getElementById('adults-plus').addEventListener('click', function() { incrementValue('adults'); });
+        document.getElementById('adults-minus').addEventListener('click', function() { decrementValue('adults'); });
+        document.getElementById('children-plus').addEventListener('click', function() { incrementValue('children'); });
+        document.getElementById('children-minus').addEventListener('click', function() { decrementValue('children'); });
+        document.getElementById('rooms-plus').addEventListener('click', function() { incrementValue('rooms'); });
+        document.getElementById('rooms-minus').addEventListener('click', function() { decrementValue('rooms'); });
 
         // Done button to close the dropdown
         document.getElementById('guests-done').addEventListener('click', function() {
@@ -237,24 +307,21 @@
         });
 
         // Function to increment the input value
-        function incrementValue(inputId, maxValue) {
+        function incrementValue(inputId) {
             var input = document.getElementById(inputId);
             var currentValue = parseInt(input.value);
-            if (currentValue < maxValue) {
-                input.value = currentValue + 1;
-                updateGuests();
-                updateButtonsState();
-            }
+            input.value = currentValue + 1;
+            updateGuests();
         }
 
-        // Function to decrement the input value with a minimum value
-        function decrementValue(inputId, minValue) {
+        // Function to decrement the input value with a minimum of 0 (except for rooms which has a minimum of 1)
+        function decrementValue(inputId) {
             var input = document.getElementById(inputId);
             var currentValue = parseInt(input.value);
+            var minValue = inputId === 'rooms' ? 1 : 0;
             if (currentValue > minValue) {
                 input.value = currentValue - 1;
                 updateGuests();
-                updateButtonsState();
             }
         }
 
@@ -270,29 +337,6 @@
             sessionStorage.setItem('adults', adults);
             sessionStorage.setItem('children', children);
             sessionStorage.setItem('rooms', rooms);
-        }
-
-        // Function to update the plus and minus buttons state
-        function updateButtonsState() {
-            var adults = parseInt(document.getElementById('adults').value);
-            var children = parseInt(document.getElementById('children').value);
-            var rooms = parseInt(document.getElementById('rooms').value);
-
-            updateButtonState('adults-plus', 'adults-minus', adults, 30);
-            updateButtonState('children-plus', 'children-minus', children, 10);
-            updateButtonState('rooms-plus', 'rooms-minus', rooms, 30);
-        }
-
-        function updateButtonState(plusId, minusId, value, maxValue) {
-            var plusButton = document.getElementById(plusId);
-            var minusButton = document.getElementById(minusId);
-
-            plusButton.style.backgroundColor = value >= maxValue ? 'gray' : 'red';
-            plusButton.style.color = 'white';
-
-            // Set initial color and background color for minus button
-            minusButton.style.backgroundColor = value > 1 ? 'red' : 'gray';
-            minusButton.style.color = 'white';
         }
 
         // Submit event for booking form
@@ -322,19 +366,8 @@
             // Redirect to the details page
             window.location.href = './details-page/details.html';
         });
-
-        // Prevent manual input in the guest inputs
-        ['adults', 'children', 'rooms'].forEach(id => {
-            document.getElementById(id).readOnly = true;
-        });
     });
 </script>
-
-
-
-
-
-
     <!-- hero section search form end -->
     <div class="container">
       <!-- recent search start -->
