admin side login page and admin profile mangagement and hotel management are added to the yspot project

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
                   <b>Login</b>
                 </button>
               </a>
+              <a class="nav-link" href="./admin/Login/login.html">
+                <butto type="button" class="btn btn-light text-danger"
+                  style="height: 30px; display: flex; align-items: center; justify-content: center;">
+                  <b>Admin</b>
+                </butto>
+              </a>
             </div>
             <ul class="navbar-nav ml-auto">
               <li class="nav-item dropdown no-arrow" id="userDetailsContainer" style="display: none;">
