details page hotel details retriew code test file are created and details page logout next not goto login page probnlem solve

--- a/details-page/details.html
+++ b/details-page/details.html
@@ -1281,7 +1281,7 @@
         document.getElementById("userDetailsContainer").style.display = "none";
         document.getElementById("registerLink").style.display = "block";
         document.getElementById("loginLink").style.display = "block";
-        window.location.href = './login/index.html';
+        window.location.href = '../login/index.html';
       }).catch((error) => {
         console.error('Error logging out: ', error);
         alert('Error logging out. Please try again.');
