admin page mobile view logo color are changed and mobile view logo some page not working this bug are fixed

--- a/admin/room.html
+++ b/admin/room.html
@@ -116,7 +116,7 @@
                     <button id="sidebarToggleTop" class="btn btn-light  d-md-none rounded-circle mr-2" style="background-color: #ff1717; color: #fff;">
                         <i class="fa fa-bars"></i>
                     </button>
-                    <div class=" bg-dark p-1 rounded d-md-none">
+                    <div class=" p-1 rounded d-md-none" style="background-color: #ff1717;">
                         <img src="img/logo.png" alt="">
                     </div>
 
