--- a/admin/index.html
+++ b/admin/index.html
@@ -98,7 +98,7 @@
                         style="background-color: #ff1717; color: #fff;">
                         <i class="fa fa-bars"></i>
                     </button>
-                    <div class=" bg-dark p-1 rounded d-md-none">
+                    <div class=" p-1 rounded d-md-none" style="background-color: #ff1717;">
                         <img src="img/logo.png" alt="">
                     </div>
                     <!-- Topbar Search -->
