--- a/admin/room.html
+++ b/admin/room.html
@@ -451,7 +451,7 @@
             if (user) {
                 loadRoomDetails(user);
             } else {
-                window.location.href = 'login.html';
+                window.location.href = './login/login.html';
             }
         });
 
