--- a/admin/Login/login.html
+++ b/admin/Login/login.html
@@ -101,7 +101,7 @@
                                     } else if (propertyType === 'Appartment') {
                                         window.location.href = '../Appartment/index.html';
                                     } else if (propertyType === 'Homestays') {
-                                        window.location.href = '../Homestays/Homestays.html';
+                                        window.location.href = '../Homestays/index.html';
                                     } else {
                                         console.error('Unknown propertyType:', propertyType);
                                     }
