--- a/admin/Appartment/index.html
+++ b/admin/Appartment/index.html
@@ -351,7 +351,7 @@
           mobileNumber,
           address,
           profileImage: profileImageUrl
-        }).then(() => {
+        }, { merge: true }).then(() => {
           alert('Profile updated successfully!');
           window.location.reload(); // Reload the page after a successful update
         }).catch((error) => {
