--- a/admin/Login/register.html
+++ b/admin/Login/register.html
@@ -21,11 +21,10 @@
 <body>
     <section class="container forms">
         <!-- Signup Form -->
-
         <div class="form ">
             <div class="form-content">
                 <header>Signup</header>
-                <form id="signup-form">
+                <form id="login-form">
                     <div class="field input-field">
                         <input type="email" name="email" id="email" placeholder="Email" class="input" required>
                     </div>
@@ -81,26 +80,36 @@
         const db = firebase.firestore();
         const auth = firebase.auth();
 
-        document.getElementById('signup-form').addEventListener('submit', function(event) {
+        document.getElementById('login-form').addEventListener('submit', function (event) {
             event.preventDefault();
 
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
+            const propertyType = document.getElementById('propertyType').value;
 
             firebase.auth().signInWithEmailAndPassword(email, password)
                 .then((userCredential) => {
                     const user = userCredential.user;
 
-                    // Save user profile to Firestore
-                    db.collection('adminProfiles').doc(user.uid).set({
-                        email: user.email,
-                        lastLogin: firebase.firestore.FieldValue.serverTimestamp()
-                    }, { merge: true }).then(() => {
-                        // Redirect to admin dashboard
-                        window.location.href = '../index.html';
-                    }).catch((error) => {
-                        console.error('Error writing admin profile: ', error);
-                    });
+                    // Check if propertyType exists in the user's profile
+                    db.collection('adminProfiles').doc(user.uid).get()
+                        .then((doc) => {
+                            if (doc.exists && doc.data().propertyType) {
+                                // Property type already exists, show message and contact customer care
+                                alert('Property type already exists. Please contact customer care and create another ID.');
+                            } else {
+                                // Property type does not exist, insert it
+                                db.collection('adminProfiles').doc(user.uid).set({
+                                    propertyType: propertyType
+                                }, { merge: true }).then(() => {
+                                    redirectUser(propertyType);
+                                }).catch((error) => {
+                                    console.error('Error updating user profile: ', error);
+                                });
+                            }
+                        }).catch((error) => {
+                            console.error('Error fetching admin profile: ', error);
+                        });
                 })
                 .catch((error) => {
                     const errorMessage = error.message;
@@ -108,6 +117,52 @@
                 });
         });
 
+        function redirectUser(propertyType) {
+            if (propertyType === 'Hotel') {
+                window.location.href = '../hotels/index.html';
+            } else if (propertyType === 'Apartment') {
+                window.location.href = '../Appartment/index.html';
+            } else if (propertyType === 'Homestay') {
+                window.location.href = '../Homestays/index.html';
+            } else {
+                console.error('Unknown propertyType:', propertyType);
+            }
+        }
+
+        document.getElementById('signup-form').addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            const email = document.querySelector('[name="email"]').value;
+            const password = document.querySelector('[name="password"]').value;
+            const repassword = document.querySelector('[name="Repassword"]').value;
+            const propertyType = document.querySelector('[name="propertyType"]').value;
+
+            if (password !== repassword) {
+                alert('Passwords do not match');
+                return;
+            }
+
+            firebase.auth().createUserWithEmailAndPassword(email, password)
+                .then((userCredential) => {
+                    const user = userCredential.user;
+
+                    // Save user profile to Firestore
+                    db.collection('adminProfiles').doc(user.uid).set({
+                        email: user.email,
+                        propertyType: propertyType,
+                        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+                    }).then(() => {
+                        // Redirect to user dashboard
+                        window.location.href = '../index.html';
+                    }).catch((error) => {
+                        console.error('Error writing user profile: ', error);
+                    });
+                })
+                .catch((error) => {
+                    const errorMessage = error.message;
+                    alert(errorMessage);
+                });
+        });
 
         auth.onAuthStateChanged(user => {
             if (user) {
